@@ -17,34 +17,39 @@ GALLERY_TIME_FORMAT           %Y-%m-%d %H:%M:%S
 # Override the plugin defaults:
 #PLUGIN_GALLERY_MATCH         \.(jpg|JPG|jpeg|JPEG|mp4|MP4|avi|AVI)$
 
-# Point to your original photos:
+# Point to your original photos.
 # Note: The original image files are NOT copied by filewiki.
 #GALLERY_ORIGINAL_URI_PREFIX  /original
 
 # Specify which files shall be treated as video files
 #GALLERY_VIDEO_MATCH          \.(mp4|MP4|avi|AVI)$
 
-# Specify additional options to pass to imagemagick's 'config' tool
-# (for thumbnail generation).
-# Note that you can override this on a per-file basis by setting
-# this variable in "myphoto.jpg.vars".
-GALLERY_CONVERT_OPTIONS       -quality 75 -auto-orient
+# Define image targets to be generated
+GALLERY_IMAGE_TARGETS                   THUMB:jpg, MINITHUMB:jpg, SCALED:jpg
 
-# Define images to be generated.
-
+# Define target dimensions (which will set __GEOMETRY__ on commands below).
 # Note: type "MINITHUMB" uses the ratio here, since we want our wide
 # panorama images to be cropped.
-GALLERY_IMAGE_THUMB          0x$thumb_height
-GALLERY_IMAGE_MINITHUMB      0x$minithumb_height  $fixed_ratio
-GALLERY_IMAGE_SCALED         0x$scaled_height
-#GALLERY_IMAGE_BIG            2560x1440
+GALLERY_IMAGE_DIMENSIONS_THUMB          0x$thumb_height
+GALLERY_IMAGE_DIMENSIONS_MINITHUMB      0x$minithumb_height  $fixed_ratio
+GALLERY_IMAGE_DIMENSIONS_SCALED         0x$scaled_height
+GALLERY_IMAGE_DIMENSIONS_BIG            2560x1440
 
 # Sidecar files with additional EXIF data
 GALLERY_SIDECAR_POSTFIX       .xmp:.XMP
 
-# Specify commands for html5 video conversion. These commands are
-# executed for all files matching GALLERY_VIDEO_MATCH. You can add
-# more options with vars like this: GALLERY_VIDEO_CMD_XXX_OPTION_*
+
+# Commands for image (thumbnail) and video generation. Note that you
+# can override or extend these commands on a per-file basis by setting
+# these variables in "myphoto.jpg.vars".
+
+imagemagick_command                          convert __OPTIONS__ -scale __GEOMETRY__ __INFILE__ __OUTFILE__
+
+GALLERY_IMAGE_CMD_JPG                        $imagemagick_command
+GALLERY_IMAGE_CMD_JPG_OPTION_ORIENT          -auto-orient
+GALLERY_IMAGE_CMD_JPG_OPTION_QUALITY         -quality 75
+GALLERY_IMAGE_CMD_JPG_MIME_TYPE              image/jpeg
+
 ffmpeg_command                               ffmpeg -y -i __INFILE__ -loglevel warning -threads 8 -copyts __OPTIONS__ __OUTFILE__
 
 GALLERY_VIDEO_CMD_WEBM                       $ffmpeg_command
@@ -58,7 +63,6 @@ GALLERY_VIDEO_CMD_WEBM_OPTION_AUDIO_BITRATE  -b:a 128k
 #GALLERY_VIDEO_CMD_WEBM_OPTION_AUDIO_QUALITY   -ar 48000
 #GALLERY_VIDEO_CMD_WEBM_OPTION_AUDIO_CHANNELS  -ac 1
 #GALLERY_VIDEO_CMD_WEBM_OPTION_VIDEO_BITRATE  -b:v 500k -maxrate 500k -bufsize 1000k
-#GALLERY_VIDEO_CMD_WEBM_OPTION_SCALE          -vf scale=-1:$GALLERY_SCALED_MAX_HEIGHT
 
 GALLERY_VIDEO_CMD_MP4                        $ffmpeg_command
 GALLERY_VIDEO_CMD_MP4_MIME_TYPE              video/mp4
